# openwrt_rust_packet_accelerator

./: .gitignore  Cargo.toml  README.md  armv7a-linux-kernel-module.json  build.rs
.cargo/: config.toml
kernel-cflags-finder/: Makefile
openwrt_package/: Makefile
rust-accelerator/: .gitignore  Cargo.toml  Makefile
rust-accelerator/src/: ipv4.rs  ipv6.rs  lib.rs  module.c  types.rs
src/: bindgen_helper.h  c_wrapper.c  lib.rs  panic.rs  printk.rs  sync.rs
