[package]
name = "rust-accelerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
linux-kernel-module = { path = ".." }
hashbrown = "0.13.2"
hash32 = "0.3.1"

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"

